--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "firebase": "^7.2.3",
     "react": "16.9.0",
     "react-native": "0.61.1",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-datepicker-modal": "^1.3.0",
+    "react-native-dialog-component": "^0.2.17",
     "react-native-dimension": "^1.0.6",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-picker-select": "^6.3.3",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.7",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.10"
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
